- change faxable output to use a more fax natural PHOTOMETRIC_MINISWHITE, 
  since T.4 normally works that way, and MINISBLACK confuses some readers.
- clean up scale() method for readability
- make scale() fail if an invalid type is supplied (previously
  documented as undefined behaviour)
- add error handling tests for scale()
- smarter warning removal
- handle effects of byte ordering when testing tiff error messages
- scale() can now expect an Image::Math::Constrain object as a scaling
  constraint via the constrain parameter.
- added tests for the various ways we can specify scaling size
- documented scale()'s scalefactor parameter
- sick of $opts{scalefactor} in scale(), give it a scalar to call it's
  own.
- check $Config{ldflags} and $Config{ccflags} for places to search for
  headers and libraries.  This deals with the way the fink build of perl
  puts -L/sw/lib in ldflags rather than using loclibpth
- eliminate some of the duplication of -I and -L options in LIBS and INC
- Makefile.PL now uses strict.
- the search for freetype1.x headers is now smarter
- add tests for scaleX()/scaleY()
- expand documentation of scaleX()/scaleY()
- rotate()s back parameter now accepts color names like other methods
- convert t/t69rubthru.t to Test::More
- minor clean up of rubthrough() method
- error handling tests for rubthrough()
- expand Imager::Transformations:
  - document parameters more explicitly
  - document return values
  - add examples
  - add AUTHOR, SEE ALSO, REVISION
- eliminate sign warning from image.c
- make TIFF detection stricter
- more memory allocation integer overflow auditing
- IM_DEBUG_MALLOC wasn't interacting well with the API
- make win32.c const happy
- make raw.c C89 compliant

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
